--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,8 +6,11 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
+        android:name=".Mvc4aApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -25,16 +28,8 @@
         </activity>
         <activity android:name=".View.activity.BaseActivity" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".View.activity.LoginActivity"
             android:label="@string/title_activity_login"
-            android:parentActivityName=".View.activity.BaseActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.yihukurama.mvc4a.View.activity.BaseActivity" />
-        </activity>
-        <activity
-            android:name=".View.activity.SettingsActivity"
-            android:label="@string/title_activity_settings"
             android:parentActivityName=".View.activity.BaseActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
