--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".View.activity.MainActivity"
+            android:name=".view.activity.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -26,34 +26,42 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".View.activity.BaseActivity" />
+        <activity android:name=".view.activity.BaseActivity" />
         <activity
-            android:name=".View.activity.LoginActivity"
+            android:name=".view.activity.testactivity.LoginActivity"
             android:label="@string/title_activity_login"
-            android:parentActivityName=".View.activity.BaseActivity">
+            android:parentActivityName=".view.activity.BaseActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.yihukurama.mvc4a.View.activity.BaseActivity" />
+                android:value="com.yihukurama.mvc4a.view.activity.BaseActivity" />
         </activity>
         <activity
-            android:name=".View.activity.SplashActivity"
+            android:name=".view.activity.testactivity.DBActivity"
+            android:label="@string/title_activity_login"
+            android:parentActivityName=".view.activity.BaseActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.yihukurama.mvc4a.view.activity.BaseActivity" />
+        </activity>
+        <activity
+            android:name=".view.activity.SplashActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_splash"
-            android:parentActivityName=".View.activity.BaseActivity"
+            android:parentActivityName=".view.activity.BaseActivity"
             android:theme="@style/FullscreenTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.yihukurama.mvc4a.View.activity.BaseActivity" />
+                android:value="com.yihukurama.mvc4a.view.activity.BaseActivity" />
         </activity>
         <activity
-            android:name=".View.activity.GuideActivity"
+            android:name=".view.activity.GuideActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_guide"
-            android:parentActivityName=".View.activity.BaseActivity"
+            android:parentActivityName=".view.activity.BaseActivity"
             android:theme="@style/FullscreenTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.yihukurama.mvc4a.View.activity.BaseActivity" />
+                android:value="com.yihukurama.mvc4a.view.activity.BaseActivity" />
         </activity>
     </application>
 
