--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <application
         android:name=".Mvc4aApplication"
         android:allowBackup="true"
@@ -37,6 +39,14 @@
         </activity>
         <activity
             android:name=".view.activity.testactivity.DBActivity"
+            android:label="@string/title_activity_login"
+            android:parentActivityName=".view.activity.BaseActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.yihukurama.mvc4a.view.activity.BaseActivity" />
+        </activity>
+        <activity
+            android:name=".view.activity.testactivity.SdcardActivity"
             android:label="@string/title_activity_login"
             android:parentActivityName=".view.activity.BaseActivity">
             <meta-data
